# mortgage-credit-model-validation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/tables/: acceptance_results.csv  backtest_quarterly.csv  calibration_deciles.csv  coefficient_table.csv  dq_results.csv  findings.csv  metrics.csv  model_comparison.csv  psi.csv  segment_metrics.csv  sensitivity.csv  summary.json
config/: data_dictionary.csv  governance_checklist.csv  validation_thresholds.json
docs/: model_validation_memo.md
sql/: data_quality_checks.sql
src/mortgage_validation/: __init__.py  charts.py  data.py  metrics.py  modeling.py  pipeline.py  validation.py
tests/: test_data.py  test_metrics.py  test_pipeline.py
